--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,8 @@ html {
 }
 
 body {
+  /* display: grid; */
+  grid-template-columns: repeat(3, 1fr);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
@@ -21,10 +23,27 @@ body {
 
 .gallery{
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-gap: 20px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 10px;
   padding: 0;
-  margin: 0;
+    list-style: none;
+}
 
-  list-style: none;
+li{
+  display: inline;
+  max-width: 200px;
+  
+}
+
+img{
+  
+  height: 110%;
+}
+.stats{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+.photo-card{
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
 }
